# nueral-trader-V5

./: .env.production.example  .gitignore  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GAP_CLOSURE.md  DEPLOYMENT_SUMMARY.md  Dockerfile  FINAL_SUMMARY.txt  LIVE_PRODUCTION_READINESS.md  LIVE_TRADING_READINESS_MAP.md  MODULE_FEATURE_MAP.md  OPERATIONAL_RUNBOOK.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_IMPLEMENTATION_GUIDE.md  QUICK_REFERENCE.txt  README.md  README_DEPLOYMENT.md  TESTING_GUIDE.md  TIER0_DEEP_AUDIT_RECALL.md  TIER0_IMPLEMENTATION_COMPLETE.md  TIER1_DEEP_AUDIT_RECALL.md  TIER2_DEEP_AUDIT_RECALL.md  alembic.ini  docker-compose.prod-ready.yml  docker-compose.prod.yml  docker-compose.yml  idempotency_store.json  main.py  order_audit_log.jsonl  order_state.json  requirements.txt
analysis/: data_manager.py  regime.py  sentiment.py  smart_money.py  technical.py  volume_profile.py
config/: settings.testnet.yaml  settings.yaml
core/: circuit_breaker.py  config.py  config_schema.py  dispatcher.py  event_bus.py  idempotency.py  instance_lock.py  persistent_idempotency.py  retry.py  safe_mode.py  structured_logging.py
data/: neural_trader.db-shm  neural_trader.db-wal  trade_wal.jsonl
data_ingestion/: __init__.py  cex_websocket.py  dex_rpc.py  economic_releases.py  fed_calendar.py  funding_feed.py  macro_aggregator.py  news_feed.py  normalizer.py  oi_feed.py  orderbook_feed.py  paper_feed.py  tick_processor.py  user_stream.py  validators.py  (+1 more)
rust/risk-engine/: Cargo.toml
rust/risk-engine/benches/: risk_bench.rs
rust/risk-engine/src/: lib.rs
rust/tick-parser/: Cargo.toml
rust/tick-parser/src/: lib.rs
(+149 files in other folders)
