[package]
name = "risk-engine"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
crossbeam = { workspace = true }
crossbeam-epoch = { workspace = true }
crossbeam-channel = { workspace = true }
crossbeam-utils = { workspace = true }
crossbeam-skiplist = { workspace = true }
parking_lot = { workspace = true }
atomic = { workspace = true }
dashmap = { workspace = true }
ahash = { workspace = true }
smallvec = { workspace = true }
rayon = { workspace = true }
num_cpus = { workspace = true }
log = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "risk_bench"
harness = false
