[package]
name = "tick-parser"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
crossbeam-channel = { workspace = true }
crossbeam-utils = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
ahash = { workspace = true }
smallvec = { workspace = true }
memmap2 = { workspace = true }
rayon = { workspace = true }
log = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "tick_bench"
harness = false
